B&L QA/objects/Protocol__c.object
<CustomObject>
    <fields>
        <fullName>Account_Profile__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Profile</label>
        <referenceTo>Account_Profile__c</referenceTo>
        <relationshipLabel>Protocol</relationshipLabel>
        <relationshipName>Protocol</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pre Op</fullName>
                </value>
                <value>
                    <fullName>Post Op</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Visit__c</fullName>
        <label>Visit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Protocol</label>
    <nameField>
        <displayFormat>PROT - {0000000000}</displayFormat>
        <label>Protocol Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Protocol</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>